# Havoc

./: .gitignore  .gitmodules  CONTRIBUTING.MD  CREDITS.md  Dockerfile  JC-Dockerfile  JT-Dockerfile  README.md  RELEASE.md  ROADMAP.md  WIKI.MD  exception_mac.hpp  makefile  plugins.txt
Teamserver/data/implants/Demon/: CMakeLists.txt  README.md  makefile
client/: CMakeLists.txt  Client-Dockerfile  README.md  config.toml  config_mac.toml  makefile
client/Data/: Havoc.qrc
client/Data/UIs/: AgentBuilder.ui  Chat.ui  Connect.ui  ConnectionDialog.ui  GateStagedDialog.ui  HavocListener.ui  InputDialog.ui  LootWidget.ui  ModuleTreeWidget.ui  NewHavoc.ui  ScriptManager.ui  SessionTable.ui  about.ui  newTeamserverConnection.ui
client/Data/UIs/SmallWidgets/: ActiveOperators.ui  SessionInfo.ui
client/Data/UIs/listenersBox/: DemonHTTP.ui
client/Data/stylesheets/: Havoc.qss  menubar.qss
client/Data/stylesheets/Dialogs/: Connect.qss  Preferences.qss
client/Data/themes/: darkorange.stylesheet
client/Include/: global.hpp  json.hpp
client/Include/Havoc/: Connector.hpp  DemonCmdDispatch.h  Havoc.hpp  Packager.hpp
client/Include/Havoc/DBManager/: DBManager.hpp
client/Include/Havoc/PythonApi/: PyDemonClass.h  PyDialogClass.hpp  PyWidgetClass.hpp  PythonApi.h
client/Include/UserInterface/: HavocUI.hpp
client/Include/UserInterface/Dialogs/: About.hpp  Listener.hpp  Payload.hpp  Preferences.hpp
client/Include/UserInterface/Widgets/: CredentialsTable.hpp  FileBrowser.hpp  ListenerTable.hpp  ScriptManager.h  SessionGraph.hpp  SessionTable.hpp  Teamserver.hpp  TeamserverTabSession.h
client/Include/Util/: Pack.hpp
client/Source/: Main.cpp  global.cpp
client/Source/Havoc/: Arguments.cpp  Connector.cpp  Havoc.cpp  Packager.cpp
client/Source/Havoc/DBManger/: DBManager.cpp  Scripts.cpp  Sessions.cpp  Teamserver.cpp
client/Source/Havoc/Demon/: CommandOutput.cpp  CommandSend.cpp  Commands.cpp  ConsoleInput.cpp
client/Source/Havoc/PythonApi/: Event.cpp  Havoc.cpp  HavocUi.cpp  PyAgentClass.cpp  PyDemonClass.cpp  PyDialogClass.cpp  PyWidgetClass.cpp
client/Source/UserInterface/: HavocUI.cpp
client/Source/UserInterface/Dialogs/: About.cpp  Listener.cpp  Payload.cpp  Preference.cpp
client/Source/UserInterface/Widgets/: DemonInteracted.cpp  FileBrowser.cpp  ListenersTable.cpp  ProcessList.cpp  PythonScript.cpp  ScriptManager.cpp  SessionGraph.cpp  SessionTable.cpp  Teamserver.cpp  TeamserverTabSession.cpp
client/Source/Util/: Base.cpp  Base64.cpp  ColorText.cpp
client/data/: Havoc.qrc
client/data/UIs/: Controler.ui  DemonInteracted.ui  EventViewer.ui  FileBrowser.ui  GateStagedDialog.ui  GateStagelessDialog.ui  Havoc.ui  HavocConnect.ui  LuaScriptWidget.ui  NewLootBox.ui  Operators.ui  Overview.ui  listener.ui  listenertab.ui  newTeamserverConnection.ui
client/data/UIs/SmallWidgets/: Dashboard.ui
client/data/stylesheets/: bottomTab.qss
client/data/stylesheets/Dialogs/: BasicDialog.qss  FileDialog.qss  Listener.qss
client/demo_script_ui/: test.py
client/include/: global.hpp
client/include/Havoc/: Havoc.hpp  Service.hpp
client/include/Havoc/DBManager/: DBManager.hpp
client/include/Havoc/PythonApi/: Event.h  HavocUi.h  PyDemonClass.h
client/include/UserInterface/: HavocUI.hpp
client/include/UserInterface/Widgets/: DemonInteracted.h  ListenerTable.hpp  ProcessList.hpp  ScriptManager.h  SessionGraph.hpp  SessionTable.hpp  Store.hpp  TeamserverTabSession.h
client/include/Util/: Base.hpp  Base64.h  ColorText.h
client/include/include/: External.h
client/include/include/Havoc/: Packager.hpp
client/src/: Main.cc  global.cc
client/src/Havoc/: Connector.cc  Havoc.cc  Packager.cc
client/src/Havoc/DBManger/: Teamserver.cc
client/src/Havoc/Demon/: CommandOutput.cc  CommandSend.cc  Commands.cc  ConsoleInput.cc
client/src/Havoc/PythonApi/: Event.cc  Havoc.cc  HavocUi.cc  PyAgentClass.cc  PyDemonClass.cc
client/src/UserInterface/: HavocUi.cc
client/src/UserInterface/Dialogs/: Connect.cc  Listener.cc  Payload.cc
client/src/UserInterface/SmallWidgets/: EventViewer.cc
client/src/UserInterface/Widgets/: Chat.cc  DemonInteracted.cc  ListenersTable.cc  LootWidget.cc  PythonScript.cc  ScriptManager.cc  SessionGraph.cc  Store.cc  TeamserverTabSession.cc
client/src/Util/: Base.cpp
client/src/src/: Main.cc
client/src/src/Havoc/: Service.cc
payloads/Demon/: CMakeLists.txt  README.md  makefile
payloads/Demon/Include/: Demon.h
payloads/Demon/Include/Common/: Clr.h  Defines.h  Macros.h  Native.h
payloads/Demon/Include/Core/: Command.h  Dotnet.h  Download.h  HwBpEngine.h  Jobs.h  Kerberos.h  Memory.h  MiniStd.h  Package.h  Parser.h  Pivot.h  Process.h  Runtime.h  SleepObf.h  Socket.h  Spoof.h  SysNative.h  Syscalls.h  Thread.h  Token.h  Transport.h  TransportHttp.h  TransportSmb.h  Win32.h  WinUtils.h
payloads/Demon/Include/Inject/: Inject.h  InjectUtil.h
payloads/Demon/Include/Loader/: CoffeeLdr.h  ObjectApi.h
payloads/Demon/Scripts/: hash_func.py
payloads/Demon/Source/: Demon.c
payloads/Demon/Source/Asm/: Syscall.x86.asm
payloads/Demon/Source/Core/: Command.c  Dotnet.c  Download.c  HwBpEngine.c  HwBpExceptions.c  Jobs.c  Kerberos.c  Memory.c  MiniStd.c  Package.c  Parser.c  Pivot.c  Runtime.c  SleepObf.c  Socket.c  Spoof.c  SysNative.c  Syscalls.c  Thread.c  Token.c  Transport.c  TransportHttp.c  TransportSmb.c  Win32.c  WinUtils.c
payloads/Demon/Source/Crypt/: AesCrypt.c
payloads/Demon/Source/Inject/: Inject.c  InjectUtil.c
payloads/Demon/Source/Loader/: CoffeeLdr.c  ObjectApi.c
payloads/Demon/Source/Main/: MainDll.c  MainExe.c  MainSvc.c
payloads/Demon/include/: Demon.h
payloads/Demon/include/common/: Clr.h  Defines.h  Macros.h  Native.h
payloads/Demon/include/core/: Command.h  Dotnet.h  Download.h  HwBpExceptions.h  Memory.h  MiniStd.h  ObjectApi.h  Package.h  Parser.h  SleepObf.h  Socket.h  Spoof.h  SysNative.h  Syscalls.h  Thread.h  Token.h  Transport.h  TransportHttp.h  TransportSmb.h  Win32.h
payloads/Demon/include/crypt/: AesCrypt.h
payloads/Demon/include/inject/: Inject.h  (+1 more)
payloads/Demon/src/: Demon.c
(+652 files in other folders)
